--- a/ProyectoCinepolis/src/main/java/presentacion/ctlogo/frmMenuCatalogo.form
+++ b/ProyectoCinepolis/src/main/java/presentacion/ctlogo/frmMenuCatalogo.form
@@ -575,6 +575,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Ubicarme"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUbicarmeActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="LblGanPel">
       <Properties>
